# 42HN-x-appliedAI-Machine-Learning-MLOps-Part-3

./: .gitignore  pyproject.toml
ml_pipeline/: __init__.py  definitions.py  fileConfig.py  jobs.py  sensors.py
ml_pipeline/assets/: constants.py  model.py  processing.py  rentals.py
ml_pipeline/data/raw/: raw_data_1.csv
ml_pipeline/data/raw_backup/: create_files.py  raw_data_2.csv  raw_data_3.csv  raw_data_4.csv  raw_data_5.csv
ml_pipeline/resources/: mlflow_resource.py
models/: preprocessor.pkl  xgboost_model.pkl
